==> Andy46/stm32_examples/05_PMW3360/STM32-PMW3360-SPI/Core/Src/sensors/pmw3360.cpp <==
#include "sensors/pmw3360.h"
#include <stdio.h>
#include "main.h"
#include "spi.h"
#include "stm32f1xx_hal.h"
#include "stm32f1xx_hal_gpio.h"
#include "stm32f1xx_hal_spi.h"

bool PMW3360::begin(unsigned int ss_pin, unsigned int CPI)
{
  _inBurst = false;
  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET);
//  SPI.begin();
  // SPI.setDataMode(SPI_MODE3);
  // SPI.setBitOrder(MSBFIRST);

  // hard reset
  HAL_Delay_us(1);
  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_RESET);
  HAL_Delay_us(1);
  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET); // ensure that the serial port is reset
  HAL_Delay_us(1);

  adns_write_reg(REG_Power_Up_Reset, 0x5A);
  HAL_Delay(50);

  // read registers 0x02 to 0x06 (and discard the data)
  adns_read_reg(REG_Motion);
  adns_read_reg(REG_Delta_X_L);
  adns_read_reg(REG_Delta_X_H);
  adns_read_reg(REG_Delta_Y_L);
  adns_read_reg(REG_Delta_Y_H);

  // upload the firmware
  adns_upload_firmware();

  setCPI(CPI);

  return check_signature();
}

PMW3360_DATA PMW3360::readBurst()
{
  unsigned long fromLast = HAL_GetTick() - _lastBurst; // micros() - _lastBurst;
  uint8_t burstBuffer[12];

//  SPI_BEGIN;

  if(!_inBurst || fromLast > 500*1000)
  {
    adns_write_reg(REG_Motion_Burst, 0x00);
    _inBurst = true;
  }

  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_RESET);

  uint8_t cmd = REG_Motion_Burst;

  HAL_SPI_Transmit(&hspi1, &cmd, sizeof(cmd), 1000);
  HAL_Delay_us(35); // waits for tSRAD

  HAL_SPI_Receive(&hspi1, burstBuffer, sizeof(burstBuffer), 1000);
  HAL_Delay_us(1); // tSCLK-NCS for read operation is 120ns

  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET);
//  SPI_END;

  if(burstBuffer[0] & 0b111) // panic recovery, sometimes burst mode works weird.
  {
    _inBurst = false;
  }

  _lastBurst = HAL_GetTick();

  PMW3360_DATA data;

  data.isMotion = (burstBuffer[0] & 0x80) != 0;
  data.isOnSurface = (burstBuffer[0] & 0x08) == 0;   // 0 if on surface / 1 if off surface

  uint8_t xl = burstBuffer[2];    // dx LSB
  uint8_t xh = burstBuffer[3];    // dx MSB
  uint8_t yl = burstBuffer[4];    // dy LSB
  uint8_t yh = burstBuffer[5];    // dy MSB
  uint8_t sl = burstBuffer[10];   // shutter LSB
  uint8_t sh = burstBuffer[11];   // shutter MSB

  data.dx = xh<<8 | xl;
  data.dy = yh<<8 | yl;
  data.shutter = sh<<8 | sl;

  data.SQUAL = burstBuffer[6];
  data.rawDataSum = burstBuffer[7];
  data.maxRawData = burstBuffer[8];
  data.minRawData = burstBuffer[9];

  return data;
}

uint8_t PMW3360::adns_read_reg(uint8_t reg_addr)
{
  if(reg_addr != REG_Motion_Burst)
  {
     _inBurst = false;
  }

  uint8_t reg = reg_addr;
  // Send address of the register, with MSBit = 1 to indicate it's a write
  uint8_t buffer[2];
  buffer[0] = (reg_addr & (uint8_t)0x7f);
  buffer[1] = 0;


  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_RESET);

  HAL_SPI_TransmitReceive(&hspi1, buffer, buffer, sizeof(buffer), 1000);
  HAL_Delay_us(100); // tSRAD is 25, but 100us seems to be stable.

  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET);
  HAL_Delay_us(19); //  tSRW/tSRR (=20us) minus tSCLK-NCS
  printf("Read: 0x%02x - 0x%02x\n", reg, buffer[1]);
  return buffer[1];
}

void PMW3360::adns_write_reg(uint8_t reg_addr, uint8_t data) {
  if(reg_addr != REG_Motion_Burst)
  {
    _inBurst = false;
  }
  printf("Write: 0x%02x - 0x%02x\n", reg_addr, data);

  // Send address of the register, with MSBit = 1 to indicate it's a write
  uint8_t buffer[2];
  buffer[0] = (reg_addr | (uint8_t)0x80);
  buffer[1] = data;

  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_RESET);

  // Send data
  HAL_SPI_Transmit(&hspi1, buffer, sizeof(buffer), 1000);

  HAL_Delay_us(20); // tSCLK-NCS for write operation
  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET);
//  HAL_Delay_us(100); // tSWW/tSWR (=120us) minus tSCLK-NCS. Could be shortened, but is looks like a safe lower bound
}

void PMW3360::adns_upload_firmware() {
	printf("Uploading firmware\n");
  // Write 0 to Rest_En bit of Config2 register to disable Rest mode.
  adns_write_reg(REG_Config2, 0x00);
  HAL_Delay(10);

  // write 0x1d in SROM_enable reg for initializing
  adns_write_reg(REG_SROM_Enable, 0x1d);

  // wait for more than one frame period
  HAL_Delay(10); // assume that the frame rate is as low as 100fps... even if it should never be that low

  // write 0x18 to SROM_enable to start SROM download
  adns_write_reg(REG_SROM_Enable, 0x18);

  HAL_Delay(10); // assume that the frame rate is as low as 100fps... even if it should never be that low

  // Write the SROM file (=firmware data)
  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_RESET);

  uint8_t cmd = REG_SROM_Load_Burst | 0x80; // write burst destination adress
  HAL_SPI_Transmit(&hspi1, &cmd, sizeof(cmd), 1000);
  HAL_Delay_us(16);

  // send all bytes of the firmware
  unsigned char c;
  for (int i = 0; i < SROM_LENGTH; i++) {
    c = srom[i]; //(unsigned char)pgm_read_byte(firmware_data + i);
    HAL_SPI_Transmit(&hspi1, &c, sizeof(c), 1000);
    HAL_Delay_us(16);
  }

  HAL_Delay(200);

  //Read the SROM_ID register to verify the ID before any other register reads or writes.
  adns_read_reg(REG_SROM_ID);

  //Write 0x00 (rest disable) to Config2 register for wired mouse or 0x20 for wireless mouse design.
  adns_write_reg(REG_Config2, 0x00);

  HAL_GPIO_WritePin(PMW_CS_GPIO_Port, PMW_CS_Pin, GPIO_PIN_SET);
}
