==> Goosoe/DIYTrackball/PMW3360.cpp <==
#include "PMW3360.h"
#define BEGIN_COM digitalWrite(_ss, LOW); delayMicroseconds(1)
#define END_COM   delayMicroseconds(1); digitalWrite(_ss, HIGH)
#define SPI_BEGIN SPI.beginTransaction(SPISettings(8000000, MSBFIRST, SPI_MODE3))
#define SPI_END   SPI.endTransaction()

bool PMW3360::begin(unsigned int ss_pin, unsigned int CPI)
{
    _ss = ss_pin;
    _inBurst = false;
    pinMode(_ss, OUTPUT);
    digitalWrite(_ss, LOW);

    SPI.begin();
    // SPI.setDataMode(SPI_MODE3);
    // SPI.setBitOrder(MSBFIRST);

    // hard reset
    SPI_BEGIN;
    END_COM; BEGIN_COM; END_COM; // ensure that the serial port is reset

    adns_write_reg(REG_Shutdown, 0xb6); // Shutdown first
    SPI_END;
    delay(300);
    
    SPI_BEGIN;
    BEGIN_COM;
    delayMicroseconds(40);
    END_COM;
    delayMicroseconds(40);

    adns_write_reg(REG_Power_Up_Reset, 0x5a); // force reset
    SPI_END;
    delay(50); // wait for it to reboot
    
    SPI_BEGIN;
    // read registers 0x02 to 0x06 (and discard the data)
    adns_read_reg(REG_Motion);
    adns_read_reg(REG_Delta_X_L);
    adns_read_reg(REG_Delta_X_H);
    adns_read_reg(REG_Delta_Y_L);
    adns_read_reg(REG_Delta_Y_H);
    // upload the firmware
    adns_upload_firmware();
    //SPI.endTransaction();
    SPI_END;
    
    delay(10);
    setCPI(CPI);

    return check_signature();
}

PMW3360_DATA PMW3360::readBurst()
{  
  unsigned long fromLast = micros() - _lastBurst;
  byte burstBuffer[12];
  
  SPI_BEGIN;
  
  if(!_inBurst || fromLast > 500*1000)
  {
    adns_write_reg(REG_Motion_Burst, 0x00);
    _inBurst = true;    
  }

  BEGIN_COM;
  SPI.transfer(REG_Motion_Burst);    
  delayMicroseconds(35); // waits for tSRAD  

  SPI.transfer(burstBuffer, 12); // read burst buffer
  delayMicroseconds(1); // tSCLK-NCS for read operation is 120ns

  END_COM;
  SPI_END;

  if(burstBuffer[0] & 0b111) // panic recovery, sometimes burst mode works weird.
  {
    _inBurst = false;
  }

  _lastBurst = micros();

  PMW3360_DATA data;

  bool motion = (burstBuffer[0] & 0x80) != 0;
  bool surface = (burstBuffer[0] & 0x08) == 0;   // 0 if on surface / 1 if off surface

  uint8_t xl = burstBuffer[2];    // dx LSB
  uint8_t xh = burstBuffer[3];    // dx MSB
  uint8_t yl = burstBuffer[4];    // dy LSB
  uint8_t yh = burstBuffer[5];    // dy MSB
  uint8_t sl = burstBuffer[10];   // shutter LSB
  uint8_t sh = burstBuffer[11];   // shutter MSB
  
  int x = xh<<8 | xl;
  int y = yh<<8 | yl;
  unsigned int shutter = sh<<8 | sl;

  data.isMotion = motion;
  data.isOnSurface = surface;
  data.dx = x;
  data.dy = y;
  data.SQUAL = burstBuffer[6];
  data.rawDataSum = burstBuffer[7];
  data.maxRawData = burstBuffer[8];
  data.minRawData = burstBuffer[9];
  data.shutter = shutter;

  return data;
}

byte PMW3360::adns_read_reg(byte reg_addr) {
  if(reg_addr != REG_Motion_Burst)
  {
     _inBurst = false;
  }

  BEGIN_COM;
  // send adress of the register, with MSBit = 0 to indicate it's a read
  SPI.transfer(reg_addr & 0x7f );
  delayMicroseconds(100); // tSRAD is 25, but 100us seems to be stable.
  // read data
  byte data = SPI.transfer(0);

  END_COM;
  delayMicroseconds(19); //  tSRW/tSRR (=20us) minus tSCLK-NCS

  return data;
}

void PMW3360::adns_write_reg(byte reg_addr, byte data) {
  if(reg_addr != REG_Motion_Burst)
  {
    _inBurst = false;
  }

  BEGIN_COM;
  //send adress of the register, with MSBit = 1 to indicate it's a write
  SPI.transfer(reg_addr | 0x80 );
  //sent data
  SPI.transfer(data);

  delayMicroseconds(20); // tSCLK-NCS for write operation
  END_COM;
  delayMicroseconds(100); // tSWW/tSWR (=120us) minus tSCLK-NCS. Could be shortened, but is looks like a safe lower bound
}

void PMW3360::adns_upload_firmware() {
  //Write 0 to Rest_En bit of Config2 register to disable Rest mode.
  adns_write_reg(REG_Config2, 0x00);

  // write 0x1d in SROM_enable reg for initializing
  adns_write_reg(REG_SROM_Enable, 0x1d);

  // wait for more than one frame period
  delay(10); // assume that the frame rate is as low as 100fps... even if it should never be that low

  // write 0x18 to SROM_enable to start SROM download
  adns_write_reg(REG_SROM_Enable, 0x18);

  // write the SROM file (=firmware data)
  
  BEGIN_COM;
  SPI.transfer(REG_SROM_Load_Burst | 0x80); // write burst destination adress
  delayMicroseconds(15);

  // send all bytes of the firmware
  unsigned char c;
  for (int i = 0; i < firmware_length; i++) {
    c = (unsigned char)pgm_read_byte(firmware_data + i);
    SPI.transfer(c);
    delayMicroseconds(15);
  }

  //Read the SROM_ID register to verify the ID before any other register reads or writes.
  adns_read_reg(REG_SROM_ID);

  //Write 0x00 (rest disable) to Config2 register for wired mouse or 0x20 for wireless mouse design. 
  adns_write_reg(REG_Config2, 0x00);

  END_COM;
}
